--- a/css/pixel.css
+++ b/css/pixel.css
@@ -172,30 +172,30 @@
 }
 
 .pixelized_1-0-1-0 {
-    clip-path: polygon(1.5vw 0,
+    clip-path: polygon(var(--_responsive---container--pixel) 0,
 
             100% 0,
 
-            100% calc(100% - 1.5vw),
-            calc(100% - 1.5vw) calc(100% - 1.5vw),
-            calc(100% - 1.5vw) 100%,
+            100% calc(100% - var(--_responsive---container--pixel)),
+            calc(100% - var(--_responsive---container--pixel)) calc(100% - var(--_responsive---container--pixel)),
+            calc(100% - var(--_responsive---container--pixel)) 100%,
 
             0 100%,
 
-            0 1.5vw,
-            1.5vw 1.5vw);
-    -webkit-clip-path: polygon(1.5vw 0,
+            0 var(--_responsive---container--pixel),
+            var(--_responsive---container--pixel) var(--_responsive---container--pixel));
+    -webkit-clip-path: polygon(var(--_responsive---container--pixel) 0,
 
             100% 0,
 
-            100% calc(100% - 1.5vw),
-            calc(100% - 1.5vw) calc(100% - 1.5vw),
-            calc(100% - 1.5vw) 100%,
+            100% calc(100% - var(--_responsive---container--pixel)),
+            calc(100% - var(--_responsive---container--pixel)) calc(100% - var(--_responsive---container--pixel)),
+            calc(100% - var(--_responsive---container--pixel)) 100%,
 
             0 100%,
 
-            0 1.5vw,
-            1.5vw 1.5vw);
+            0 var(--_responsive---container--pixel),
+            var(--_responsive---container--pixel) var(--_responsive---container--pixel));
 }
 
 .pixelized_1-3-1-0 {
